updated desktop readme, referencing to KCEF documentation